cue.mod/gen/github.com/cert-manager/cert-manager/v1/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_cert-manager-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    annotations:
        cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-ca
    labels:
        app: webhook
        app.kubernetes.io/component: webhook
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: webhook
        app.kubernetes.io/version: v1.19.2
        helm.sh/chart: cert-manager-v1.19.2
    name: cert-manager-webhook
webhooks:
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: cert-manager-webhook
            namespace: cert-manager
            path: /validate
      failurePolicy: Fail
      matchPolicy: Equivalent
      name: webhook.cert-manager.io
      namespaceSelector:
        matchExpressions:
            - key: cert-manager.io/disable-validation
              operator: NotIn
              values:
                - "true"
      rules:
        - apiGroups:
            - cert-manager.io
            - acme.cert-manager.io
          apiVersions:
            - v1
          operations:
            - CREATE
            - UPDATE
          resources:
            - '*/*'
      sideEffects: None
      timeoutSeconds: 30
